test: 보류 중인 분실물 목록 조회 테스트[#96]